# STM8S103F3-CMake

./: .gitignore  CMakeLists.txt  README.md  compile-me.sh
src/: gpio.c  gpio.h  log.c  log.h  main.c  main.h  stm8s_conf.h  stm8s_it.c  stm8s_it.h  tick.c  tick.h  uart.c  uart.h
